paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:43:14
   |
43 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:12:36
   |
12 |         self.0 = (self.0 & !0xf) | (value & 0xf);
   |                                    ^^^^^^^^^^^^^ expected `u16`, found `u32`

error[E0277]: no implementation for `u16 | u32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:12:34
   |
12 |         self.0 = (self.0 & !0xf) | (value & 0xf);
   |                                  ^ no implementation for `u16 | u32`
   |
   = help: the trait `BitOr<u32>` is not implemented for `u16`
   = help: the following other types implement trait `BitOr<Rhs>`:
             `&u16` implements `BitOr<u16>`
             `&u16` implements `BitOr`
             `u16` implements `BitOr<&u16>`
             `u16` implements `BitOr`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:15:9
   |
14 |     fn get_t(&self) -> u32 {
   |                        --- expected `u32` because of return type
15 |         self.0 & 0xf
   |         ^^^^^^^^^^^^ expected `u32`, found `u16`
   |
help: you can convert a `u16` to a `u32`
   |
15 |         (self.0 & 0xf).into()
   |         +            ++++++++

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:18:44
   |
18 |         self.0 = (self.0 & !(0x1f << 9)) | (((value as u32) & 0x1f) << 9);
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`

error[E0277]: no implementation for `u16 | u32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_3/sample_001/target.rs:18:42
   |
18 |         self.0 = (self.0 & !(0x1f << 9)) | (((value as u32) & 0x1f) << 9);
   |                                          ^ no implementation for `u16 | u32`
   |
   = help: the trait `BitOr<u32>` is not implemented for `u16`
   = help: the following other types implement trait `BitOr<Rhs>`:
             `&u16` implements `BitOr<u16>`
             `&u16` implements `BitOr`
             `u16` implements `BitOr<&u16>`
             `u16` implements `BitOr`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.